--- a/instructor-window.css
+++ b/instructor-window.css
@@ -1,4 +1,37 @@
-.aqDiv {
+#aDiv {
   background-color: black;
   color: white;
+  margin: 20px;
+  padding: 20px;
+  font-size: 60px;
+  text-align: center;
 }
+
+#qDiv {
+  background-color: black;
+  color: white;
+  margin: 20px;
+  padding: 20px;
+  font-size: 60px;
+  text-align: center;
+}
+
+#source-div {
+  background-color: black;
+  color: white;
+  margin: 20px;
+  padding: 20px;
+  font-size: 60px;
+  text-align: center;
+}
+
+#comments-div {
+  background-color: black;
+  color: white;
+  margin: 20px;
+  padding: 20px;
+  font-size: 60px;
+  text-align: center;
+}
+
+
