--- a/instructor-window.css
+++ b/instructor-window.css
@@ -7,8 +7,7 @@ div {
    border: 4px solid blue; 
 }
 
-
-#answer-div {
+.game-info-field, .aq-field {
   background-color: black;
   color: white;
   margin: 20px;
@@ -17,31 +16,5 @@ div {
   text-align: center;
 }
 
-#question-div {
-  background-color: black;
-  color: white;
-  margin: 20px;
-  padding: 20px;
-  font-size: 60px;
-  text-align: center;
-}
-
-#source-div {
-  background-color: black;
-  color: white;
-  margin: 20px;
-  padding: 20px;
-  font-size: 60px;
-  text-align: center;
-}
-
-#comments-div {
-  background-color: black;
-  color: white;
-  margin: 20px;
-  padding: 20px;
-  font-size: 60px;
-  text-align: center;
-}
 
 
