--- a/instructor-window.css
+++ b/instructor-window.css
@@ -5,14 +5,20 @@ body {
 
 div {
    border: 4px solid blue; 
+   border-radius: 5px;
+   margin: 4px;
 }
 
-.game-info-field, .aq-field {
+.top-info-div {
+  display: flex;
+}
+
+.game-info-field, .round-info-field, .aq-field-div {
   background-color: black;
   color: white;
-  margin: 20px;
-  padding: 20px;
-  font-size: 60px;
+  margin: 10px;
+  padding: 10px;
+  font-size: 40px;
   text-align: center;
 }
 
