--- a/jeopardygame.css
+++ b/jeopardygame.css
@@ -44,3 +44,25 @@ body {
 .default {
     color: red;
 }
+
+#overlay-box {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+}
+
+.game-info-field {
+    font-size: 16px;
+}
+
+#aq-information {
+    background-color: black;
+}
