--- a/jeopardygame.css
+++ b/jeopardygame.css
@@ -1,40 +1,48 @@
 body {
     background-color: black;
     color: lightgray;
+    width: 100%;
+    height: 100%;
 }
 
 #finalGrid {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    align-items: center;
-    justify-content: space-around;
+
+    height: 100%;
 }
 
 .category-container {
     display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+    flex-flow: column;
+    height: 100%;
     justify-content: space-around;
     align-items: stretch;
 }
 
-.qa_title {
-    padding: 10px;
-    margin: 4px;
-    font-size: 20px;
-    border: solid white 1px;
-    background-color: blue;
-    border-radius: 4px;
+#game-table {
+    table-layout: fixed;
+    width: 100%;
     text-align: center;
+    border-collapse: separate;
+    border-spacing: 8px 8px;
 }
 
-.qa_item {
+th.qa_title {
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 6px;
+    background-color: blue;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 50px;
+
+}
+
+td.qa_item {
     color: white;
     padding: 10px;
-    font-size: 20px;
     background-color: blue;
-    text-align: center;
+    border-radius: 15px;
 }
 
 .qa_item:hover {
@@ -48,13 +56,17 @@ body {
 #overlay-box {
     position: fixed;
     display: none;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,1.0);
     z-index: 2;
     cursor: pointer;
 }
@@ -66,3 +78,12 @@ body {
 #aq-information {
     background-color: black;
 }
+
+.overlay-item {
+    font-size: 60px;
+    margin: 20px;
+    padding: 30px;
+    border: solid lightblue 4px;
+    border-radius: 30px;
+}
+
