fixed cell heights

--- a/jeopardygame.css
+++ b/jeopardygame.css
@@ -34,7 +34,8 @@ th.qa_title {
     background-color: blue;
     border-radius: 15px;
     text-align: center;
-    font-size: 50px;
+    height: 64px;
+
 
 }
 
