--- a/game-creator.css
+++ b/game-creator.css
@@ -6,7 +6,7 @@ body {
 }
 
 #finalGrid {
-
+    display: flex;
     height: 100%;
 }
 
@@ -36,11 +36,13 @@ th.qa_title {
 
 }
 
-td.qa_item {
+.qa_item {
     color: white;
-    padding: 10px;
+    text-align: center;
+    padding: 4px;
+    margin: 4px;
     background-color: blue;
-    border-radius: 15px;
+    border-radius: 4px;
 }
 
 .qa_item:hover {
